--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sentinel-9X | Future of Police Patrol</title>
+    <title>Sentinel-9X | Future of digital surveillance</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -490,7 +490,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2026 Sentinel-9X Advanced Patrol Systems. All rights reserved. This technology is developed with strict adherence to ethical guidelines and privacy regulations.</p>
+                <p>&copy; 2026 Sentinel-9X Advanced security Systems. All rights reserved. This technology is developed with strict adherence to ethical guidelines and privacy regulations.</p>
                 <div class="footer-legal">
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of Use</a>
